移除maven插件配置中的jvmArguments参数